Apply suggestions from code review
Co-authored-by: Aoife Hegarty <92876203+netapp-aoife@users.noreply.github.com>

--- a/hu_windows_2012r2.adoc
+++ b/hu_windows_2012r2.adoc
@@ -29,7 +29,7 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Install Windows hotfixes
 
-We suggest the use of *latest cumulative update* to be installed on the server.
+NetApp recommends that the *latest cumulative update* is installed on the server.
 
 NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2012_R2[Microsoft Update Catalog 2012 R2^] website to obtain and install the required Windows hotfixes for your version of Windows.
 
