--- a/_include/windows/reuse_windows_installing_WUHU.adoc
+++ b/_include/windows/reuse_windows_installing_WUHU.adoc
@@ -1,1 +1,1 @@
-The Windows Unified Host Utilities (WUHU) are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. NetApp recommends downloading and installation of the latest utility kit. For WUHU configuration information and instructions, refer to link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Unified Host Utilities documentation] and select the installation procedure for your Windows Unified Host Utilities version.
+The Windows Unified Host Utilities (WUHU) are a set of software programs with documentation that enables you to connect host computers to virtual disks (LUNs) on a NetApp SAN. NetApp recommends downloading and installation of the latest utility kit. For WUHU configuration information and instructions, refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_wuhu_71_rn.html[Windows Unified Host Utilities documentation] and select the installation procedure for your Windows Unified Host Utilities version.
