--- a/hu_windows_2019.adoc
+++ b/hu_windows_2019.adoc
@@ -26,7 +26,7 @@ include::_include/windows/reuse_windows_san_booting.adoc[]
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Install Windows hotfixes
-We suggest the use of *latest cumulative update* to be installed on the server.
+NetApp recommends that the *latest cumulative update* is installed on the server.
 
 NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2019[Microsoft Update Catalog 2019^] website to obtain and install the required Windows hotfixes for your version of Windows.
 
