--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -17,15 +17,17 @@ summary: Windows Unified Host Utilities includes an installation program that se
 [.lead]
 The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
 
-The Windows Unified Host Utilities continues to support the following versions of Windows:
+The Windows Unified Host Utilities supports the following versions of Windows:
 
-* Windows 2012
-* Windows 2012R2
+* Windows 2022
+* Windows 2019
 * Windows 2016
+* Windows 2012R2
+* Windows 2012
 
-Windows Unified Host Utilities includes an installation program that sets the required Windows registry and Host Bus Adapter (HBA) parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
+Windows Unified Host Utilities includes an installation program that sets the required Windows registry and Host Bus Adapter (HBA) parameters so that a Windows host can correctly handle the storage system behaviors for NetApp ONTAP and E-Series platforms.
 
-When you install the Host Utilities software, the installer sets required Windows registry and Host Bus Adapter (HBA) parameters.
+When you install the Host Utilities software, the installer sets the required Windows registry and Host Bus Adapter (HBA) parameters.
 
 The following programs and files are installed on the Windows host computer. The default directory is `C:\Program Files\NetApp\Windows Host Utilities`.
 
@@ -39,15 +41,16 @@ The following programs and files are installed on the Windows host computer. The
 | `\NetAppQCLI\fcconfig.ini`
 |Used by the installation program to set HBA parameters.
 |`\NetAppQCLI\*.*`
-|Used by the installation program to set QLogic Fibre Channel HBA parameters.
+|Used by the installation program to set QLogic FC HBA parameters.
 |`san_version.exe`
-|Displays the version of the Host Utilities and Fibre Channel HBAs.
+|Displays the version of the Host Utilities and FC HBAs.
 |===
 
 
-The Host Utilities support different Windows host configurations, protocols, and Multipathing options. For more information, see https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
+The Host Utilities support different Windows host configurations, protocols, and multipathing options. See the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^] for the most current list of supported configurations.
 
-== Verify your host and storage system configuration
+== Verify your host and storage system configurations
+
 Before you install the Host Utilities, you must verify that the Host Utilities version supports your host and storage system configuration so that the software installs correctly.
 
 .Steps
@@ -56,30 +59,33 @@ Before you install the Host Utilities, you must verify that the Host Utilities v
 . Check the hotfixes required for the respective host on the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[SAN host Windows documentation].
 +
 [NOTE]
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the Host configurations category to find the relevant hotfix information for earlier versions of Windows server.
+link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
 
 . Add the iSCSI or FCP license and start the target service.
 +
-The Fibre Channel and iSCSI protocols do not require licenses on E-Series storage systems using SANtricity Storage Manager.
+[NOTE]
+The FC and iSCSI protocols do not require licenses on E-Series storage systems using the SANtricity Storage Manager.
+
 . Verify your cabling
 +
-See the https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanconf/home.html?cp=14_7[SAN Configuration Guide^] for your version of ONTAP or https://mysupport.netapp.com/ecm/ecm_get_file/ECMLP2773533[E-Series Hardware Cabling Guide^] for detailed cabling and configuration information.
+See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for your version of ONTAP or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] document for detailed cabling and configuration information.
 
 == Configure FC HBAs and switches
-Install and configure one or more supported Fibre Channel host bus adapters (HBAs) for Fibre Channel connections to the storage system.
 
-The Windows Host Utilities installer sets the required Fibre Channel HBA settings.
+Install and configure one or more supported FC host bus adapters (HBAs) for FC connections to a storage system.
+
+The Windows Host Utilities installer sets the required FC HBA settings.
 
 [NOTE]
-Do not change HBA settings manually.
+Do not change the HBA settings manually.
 
 .Steps
 
-. Install one or more supported Fibre Channel host bus adapters (HBAs) according to the instructions provided by the HBA vendor.
+. Install one or more supported FC HBAs according to the instructions provided by the HBA vendor.
 . Obtain the supported HBA drivers and management utilities and install them according to the instructions provided by the HBA vendor.
-. Connect the HBAs to your Fibre Channel switches or directly to the storage system.
-. Create zones on the Fibre Channel switch according to your Fibre Channel switch documentation.
-. For ONTAP, zone the switch by WWPN. Be sure to use the WWPN of the LIFs and not of the physical ports on the storage controllers. For more information, see https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanconf/home.html?cp=14_7[SAN Configuration Guide^].
+. Connect the HBAs to your FC switches or directly to the storage system.
+. Create zones on the FC switch according to your FC switch documentation.
+. For ONTAP, zone the switch by worldwide port name (WWPN). Be sure to use the WWPN of the LIFs and not of the physical ports on the storage controllers. See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for more information.
 
 == Install the Host Utilities
 The installation program installs the Host Utilities package and sets the Windows registry and HBA settings.
@@ -87,28 +93,35 @@ The installation program installs the Host Utilities package and sets the Window
 You must specify whether to include multipathing support when you install the Windows Unified Host Utilities software package. The installer prompts you for the following choice. You can also run a quiet (unattended) installation from a Windows command prompt.
 
 .Multipathing support
-* Choose MPIO if you have more than one path from the Windows host or virtual machine to the storage system.
-* Choose no MPIO only if you are using a single path to the storage system.
-* The MPIO selection is not available for Windows XP and Windows Vista systems; multipath I/O is not supported on these guest operating systems.
-* For Hyper-V guests, raw (pass-through) disks do not appear in the guest OS if you choose multipathing support. You can either use raw disks, or you can use MPIO, but you cannot use both in the guest OS.
 
-=== Install the Host Utilities interactively
+* Choose `MPIO` if you have more than one path from the Windows host or virtual machine to the storage system.
+* Choose `no MPIO` only if you are using a single path to the storage system.
 
+The MPIO selection is not available for Windows XP and Windows Vista systems; multipath I/O is not supported on these guest operating systems.
+For Hyper-V guests, raw (pass-through) disks do not appear in the guest OS if you choose multipathing support. You can either use raw disks, or you can use MPIO, but you cannot use both in the guest OS.
+
+
+
+You can install the host utilities interactively or using the command line. 
+
+[role="tabbed-block"]
+====
+
+.Install the Host Utilities interactively
+--
+.Steps
 To install the Host Utilities software package interactively, you must run the Host Utilities installation program and follow the prompts.
 
 .Steps
 
-. Download the executable file from https://mysupport.netapp.com/site/[NetApp Support Site^].
+. Download the executable file from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^].
 . Change to the directory from which you downloaded the executable file.
 . Run the `netapp_windows_host_utilities_7.1_x64` file and follow the instructions on the screen.
 . Reboot the Windows host when prompted.
-
-=== Install the Host Utilities from a command line
-
-* You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at a Windows command prompt.
-* The Host Utilities installation package must be in a path that is accessible by the Windows host.
-* Follow the instructions for installing the Host Utilities interactively to obtain the installation package.
-* The system automatically reboots when the installation is complete.
+--
+.Install the Host Utilities from a command line
+--
+You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at a Windows command prompt. The Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively to obtain the installation package. The system automatically reboots when the installation is complete.
 
 .Steps
 
@@ -116,13 +129,13 @@ To install the Host Utilities software package interactively, you must run the H
 +
 `msiexec /i installer.msi /quiet MULTIPATHING= {0 | 1} [INSTALLDIR=inst_path]`
 
-* where installer is the name of the `.msi` file for your CPU architecture;
-* MULTIPATHING specifies whether MPIO support is installed. Allowed values are 0 for no, 1 for yes
+* `installer` is the name of the `.msi` file for your CPU architecture
+* MULTIPATHING specifies whether MPIO support is installed. Allowed values are "0" for no, "1" for yes
 * `inst_path` is the path where the Host Utilities files are installed. The default path is `C:\Program Files\NetApp\Windows Host Utilities\`.
 
 [NOTE]
-To see the standard Microsoft Installer (MSI) options for logging and other functions, enter `msiexec /help` at a Windows command prompt. For example:
-`msiexec /i install.msi /quiet /l*v <install.log> LOGVERBOSE=1`
-
+To see the standard Microsoft Installer (MSI) options for logging and other functions, enter `msiexec /help` at a Windows command prompt. For example, the`msiexec /i install.msi /quiet /l*v <install.log> LOGVERBOSE=1` command displays logging information.
+--
+====
 
 
