--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -16,17 +16,17 @@ summary: Windows Unified host utilities includes an installation program that se
 [.lead]
 The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
 
-The Windows Unified Host Utilities continues to support the following versions of Windows:
+The Windows Unified Host Utilities supports the following versions of Windows:
 
-* Windows 2012
-* Windows 2012R2
-* Windows 2016
-* Windows 2019
 * Windows 2022
+* Windows 2019
+* Windows 2016
+* Windows 2012R2
+* Windows 2012
 
-Windows Unified host utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
+Windows Unified Host Utilities includes an installation program that sets the required Windows registry and Host Bus Adapter (HBA) parameters so that a Windows host can correctly handle the storage system behaviors for NetApp ONTAP and E-Series platforms.
 
-When you install the host utilities software, the installer sets the required Windows registry and HBA parameters.
+When you install the Host Utilities software, the installer sets the required Windows registry and HBA parameters.
 
 The following programs and files are installed on the Windows host computer. The default directory is `C:\Program Files\NetApp\Windows Host Utilities`.
 
@@ -42,7 +42,7 @@ The following programs and files are installed on the Windows host computer. The
 |`\NetAppQCLI\*.*`
 |Used by the installation program to set the QLogic FC HBA parameters.
 |`san_version.exe`
-|Displays the version of the host utilities and FC HBAs.
+|Displays the version of the Host Utilities and FC HBAs.
 |===
 
 The host utilities support different Windows host configurations, protocols, and multipathing options. For more information, see the https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
@@ -58,15 +58,16 @@ Before you install the host utilities, you must verify that the host utilities v
 . Check the hotfixes required for the respective host in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[SAN host Windows documentation].
 +
 [NOTE]
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
+link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
 
 . Add the iSCSI, FCP, or NVMe-oF license and start the target service.
 +
-The FC and iSCSI protocols do not require licenses on E-Series storage systems using SANtricity Storage Manager.
+[NOTE]
+The FC and iSCSI protocols do not require licenses on E-Series storage systems using the SANtricity Storage Manager.
 
 . Verify your cabling.
 +
-See the https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanconf/home.html?cp=14_7[SAN Configuration Guide^] for your ONTAP version or the https://mysupport.netapp.com/ecm/ecm_get_file/ECMLP2773533[E-Series Hardware Cabling Guide^] for detailed cabling and configuration information.
+See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for your version of ONTAP or https://docs.netapp.com/us-en/e-series/install-hw-cabling/index.html[E-Series hardware cabling^] document for detailed cabling and configuration information.
 
 == Configure FC HBAs and switches
 
@@ -83,7 +84,7 @@ Do not change the HBA settings manually.
 . Obtain the supported HBA drivers and management utilities and install them according to the instructions provided by the HBA vendor.
 . Connect the HBAs to your FC switches or directly to the storage system.
 . Create zones on the FC switch according to your FC switch documentation.
-. For ONTAP, zone the switch by the WWPN. Be sure to use the WWPN of the logical interfaces (LIFs) and not the WWPN of the physical ports on the storage controllers. For more information, see https://docs.netapp.com/ontap-9/topic/com.netapp.doc.dot-cm-sanconf/home.html?cp=14_7[SAN Configuration Guide^].
+. For ONTAP, zone the switch by the WWPN. Be sure to use the WWPN of the logical interfaces (LIFs) and not the WWPN of the physical ports on the storage controllers. See the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] documentation for more information.
 
 == Install the host utilities
 
@@ -99,17 +100,19 @@ You must specify whether to include multipathing support when you install the Wi
 The MPIO selection is not available for Windows XP and Windows Vista systems; multipath I/O is not supported on these guest operating systems.
 For Hyper-V guests, raw (pass-through) disks do not appear in the guest OS if you choose multipathing support. You can either use raw disks, or you can use MPIO, but you cannot use both in the guest OS.
 
+You can install the host utilities interactively or using the command line. 
+
 [role="tabbed-block"]
 ====
 
-.Install the host utilities interactively
+.Install the Host Utilities interactively
 --
 
-To install the host utilities software package interactively, you must run the host utilities installation program and follow the prompts.
+To install the Host Utilities software package interactively, you must run the host utilities installation program and follow the prompts.
 
 .Steps
 
-. Download the executable file from the https://mysupport.netapp.com/site/[NetApp Support Site^].
+. Download the executable file from the https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.2/downloads[NetApp Support Site^].
 . Change to the directory where you downloaded the executable file.
 . Run the `netapp_windows_host_utilities_7.2_x64` file and follow the instructions on the screen.
 . Reboot the Windows host when prompted.
