--- a/hu_wuhu_repair_remove.adoc
+++ b/hu_wuhu_repair_remove.adoc
@@ -15,7 +15,7 @@ summary: Windows Unified Host Utilities includes an installation program that se
 :imagesdir: ./media/
 
 [.lead]
-You can use the *Repair* option of the host utilities installation program to update the HBA and Windows registry settings. You can remove the host utilities entirely, either interactively or from the Windows command line.
+You can use the *Repair* option of the Host Utilities installation program to update the Host bus adapter (HBA) and Windows registry settings. You can remove the Host Utilities entirely, either interactively or from the Windows command line.
 
 [role="tabbed-block"]
 ====
